# rocketPractice

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  cloudbuild-production.yaml  cloudbuild-test.yaml  cloudbuild.yaml  skaffold.yaml
.circleci/: config.yml
docker/: serverDockerfile
k8s/: pod.yaml  service.yaml
k8s/default/: deployment.yaml  pod.yaml  service.yaml
k8s/production/: deployment.yaml  loadbalancer.yaml  loadbalancer.yaml.encode  pod.yaml
k8s/test/: deployment.yaml  pod.yaml  service.yaml
rust-api-server/: Cargo.toml  Dockerfile
rust_api_server/: Cargo.toml  Dockerfile
rust_api_server/src/: api.rs  main.rs  othello.rs
rust_api_server/src/api/: error.rs
rust_api_server/src/othello/: board.rs  cell.rs  error.rs  tests.rs
rust_api_server/src/othello/board/: tests.rs
rust_api_server/src/othello/cell/: tests.rs
rust_api_server/src/othello/othello_board/: tests.rs
skaffold/: development.yaml
src/: main.rs  othello.rs
src/othello/: io.rs  othello_board.rs  tests.rs
src/othello/othello_board/: othello_cell.rs  tests.rs
src/othello/othello_board/othello_cell/: tests.rs
