[package]
name = "rust_api_server"
version = "0.1.0"
authors = ["hamadakafu <kafu.h1998@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_contrib = "0.4.0"
rocket_codegen = "0.4.0"
failure = "0.1.5"
mongodb = "0.3"
serde = "1.0"
serde_json= "1.0"
serde_derive = "1.0"
wither = "0.8"
wither_derive = "0.8"
